[gd_scene load_steps=4 format=3 uid="uid://ciihbrit7cyn"]

[ext_resource type="PackedScene" uid="uid://d3vw3phj2xdey" path="res://scenes/deck.tscn" id="1_rb6hk"]
[ext_resource type="Script" uid="uid://cesfayejjp4p0" path="res://scenes/deck_builder.gd" id="1_wmg8o"]
[ext_resource type="Theme" uid="uid://dxhnvctvt3p07" path="res://theme/gui.tres" id="2_wmg8o"]

[node name="deck_builder" type="Node2D"]
script = ExtResource("1_wmg8o")

[node name="Deck" parent="." instance=ExtResource("1_rb6hk")]
position = Vector2(99, 142)
scale = Vector2(2, 2)

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 825.0
offset_top = 7.0
offset_right = 1161.0
offset_bottom = 466.0
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="points_title" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wmg8o")
text = "Deck # of cards: "

[node name="points_label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="card_count_attack" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="key" type="Label" parent="PanelContainer/VBoxContainer/card_count_attack"]
layout_mode = 2
theme = ExtResource("2_wmg8o")
text = "card key"

[node name="attack_count" type="Label" parent="PanelContainer/VBoxContainer/card_count_attack"]
layout_mode = 2

[node name="card_count_def" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="key" type="Label" parent="PanelContainer/VBoxContainer/card_count_def"]
layout_mode = 2
theme = ExtResource("2_wmg8o")
text = "card key"

[node name="def_count" type="Label" parent="PanelContainer/VBoxContainer/card_count_def"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
offset_left = 46.0
offset_top = 369.0
offset_right = 518.0
offset_bottom = 672.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="att_add" type="Button" parent="PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "add attck"

[node name="att_remove" type="Button" parent="PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "remove attack"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="def_add" type="Button" parent="PanelContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "add def"

[node name="def_remove" type="Button" parent="PanelContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "remove def"
